# template-gin-axum

./: .gitignore  Cargo.toml  Makefile  dockerfile  makefile
.cargo/: config.toml
conf/ci/: dockerfile  dockerfile.dep
conf/mirror/: debian.sources
sql/: 202409120001_user_base.sql  202409120002_friend.sql  202409120003_friend_request.sql  202409120004_todo.sql  202409120005_note.sql
src/: app.rs  main.rs
src/controller/: mod.rs  pem.rs  ping.rs  todo.rs  user.rs
src/controller/middleware/: jwt.rs  limiter.rs  logger.rs  mod.rs
src/core/: dep.rs  mod.rs
src/data/: mod.rs
src/data/pg/: mod.rs  todo.rs  user.rs
src/data/rd/: mod.rs
src/model/: common.rs  mod.rs  todo.rs  user.rs
src/pkg/: mod.rs  rsa.rs  util.rs
src/pkg/rsa/: mod.rs
