[package]
name = "template-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json"] }
axum = "0.7.5"
serde = "1.0.206"
serde_json = "1.0.122"
jsonwebtoken = "9.3.0"
