[package]
name = "template-gin-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.26.1", features = ["tokio-comp", "json"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "chrono",
  "json",
] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
serde_with = { version = "3.9.0", features = ["chrono_0_4"] }
rsa = "0.9.6"
axum = "0.7.5"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
anyhow = "1.0.86"
chrono = "0.4.38"
validator = { version = "0.18.1", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
jsonwebtoken = "9.3.0"

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
opt-level = "z"
codegen-units = 1
