[package]
name = "template-gin-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
base64 = "0.22.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
redis = { version = "0.27.4", features = ["tokio-comp", "json"] }
reqwest = { version = "0.12.8", features = ["json", "stream"] }
rsa = "0.9.6"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
serde_with = { version = "3.9.0", features = ["chrono_0_4"] }
sha2 = "0.10.8"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "chrono",
  "json",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
validator = { version = "0.18.1", features = ["derive"] }

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
opt-level = 3
codegen-units = 1
